--- a/pod1.yaml
+++ b/pod1.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: nginx
+  name: juan-david
 spec:
   containers:
-  - name: nginx
+  - name: juan-david
     image: nginx:1.14.2
     ports:
     - containerPort: 80
