--- a/deployment1.yaml
+++ b/deployment1.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: juan-david-deployment
+  namespace: juan-david
   labels:
     app: juan-david
 spec:
